--- a/style.css
+++ b/style.css
@@ -49,23 +49,42 @@ html {
     text-align: center;
 }
 
+#eventTitleInput{
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 15px;
+  border-radius: 3px;
+  outline: none;
+  border: none;
+  box-shadow: 0px 0px 3px gray;
+}
 
-/*.Event {
+.sidepanelcontainer{
     width: 0;
     height: 0;
     background-color: cornflowerblue;
     border: 1px solid gray;
-    /* transition-duration: 1000ms;
+    opacity: 0;
+    pointer-events: none;
+    /*transition-duration: 1000ms;
     transition-property: width, height;
-    transition-timing-function: ease-out; 
-
+    transition-timing-function: ease-out; */
     transition: 1000ms width ease-out, 1000ms height ease-out;
 }
 
-.Event:hover {
+.Sidepanel{
+    width: 600px;
+    height: 300px;
+    padding: 30px 50px;
+}
+
+.sidepanelcontainer.show { /*Change transtiion here*/
+    opacity: 1;
+    pointer-events: auto;
     width: 20%;
     height: 80vh;
-} */
+}
 
 .calendar {
     width: 45rem;
